# d-repr

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  README.md  pyproject.toml  version_manager.py
.github/workflows/: build.sh  ci.yml  pydiscovery.py
.travis/: build-engine.sh  install-dependencies-x86_64.sh  publish-pypi.sh
containers/devel/: .gitignore  Cargo.toml  Dockerfile  build.sh  coverage.sh
containers/karma/: Dockerfile  docker-compose.yml
drepr/: .gitignore  Cargo.toml  README.md  __main__.py  engine.py  main.py  test.py
drepr/benchmarks/: Cargo.toml
drepr/engine/: Cargo.toml  tmp.rs
drepr/engine/src/: pyi.rs
drepr/engine/src/alignments/: dfs.rs  func_builder.rs  inference.rs
drepr/engine/src/alignments/funcs/: mod.rs  mul_chain_align.rs  sgl_value_align.rs
drepr/engine/src/alignments/funcs/iters/: aligns_iter.rs  array_iter.rs  dedup_iter.rs  mod.rs
drepr/engine/src/execution_plans/: mod.rs
drepr/engine/src/execution_plans/classes_map_plan/: class_map_plan.rs  data_prop.rs  literal_prop.rs  mod.rs  subject.rs
drepr/engine/src/executors/: mod.rs  preprocessing.rs
drepr/engine/src/executors/classes_map/: buffer_writer.rs  mod.rs
drepr/engine/src/executors/classes_map/generic_algo/: class_map.rs  dprop_mandatory_map.rs  dprop_optional_map.rs  oprop_mandatory_map.rs  oprop_optional_map.rs
drepr/engine/src/executors/classes_map/specific_algo/: basic_macro_stmt.rs  class_macro_map.rs  dprop_macro_map.rs  oprop_macro_map.rs  recursive_num_seq.rs  recursive_num_seq_strict.rs  unroll_macro.rs
drepr/engine/src/functions/: filter_func.rs  mod.rs
drepr/engine/src/lang/: mod.rs  preprocessing.rs  resource.rs
drepr/engine/src/lang/alignment/: mod.rs  range_alignment.rs  value_alignment.rs
drepr/engine/src/lang/semantic_model/: node.rs
drepr/engine/src/python/: types.rs
drepr/engine/src/writers/stream_writer/: mod.rs  stream_writer.rs
drepr/engine/src/writers/stream_writer/data_frame/: mod.rs
drepr/engine/src/writers/stream_writer/graph_json/: mod.rs
drepr/engine/src/writers/stream_writer/graph_json/class_writers/: track_withurioptional_writer.rs
drepr/engine/src/writers/stream_writer/graph_json/json_value_fmt/: int_value_fmt.rs  mod.rs  str_value_fmt.rs  unspecified_value_fmt.rs
drepr/engine/src/writers/stream_writer/graph_py/: mod.rs
drepr/engine/src/writers/stream_writer/graph_py/class_writers/: mod.rs  track_withurioptional_writer.rs
drepr/engine/src/writers/stream_writer/turtle/: value_fmt.rs
drepr/engine/src/writers/stream_writer/turtle/class_writers/: generic_writer.rs
drepr/engine/tests/: main.rs  test_executors.rs
drepr/engine/tests/resources/: readme.md  setup.py
drepr/engine/tests/resources/s04/: r02.department.csv
drepr/models/: __init__.py  drepr.py  preprocessing.py  resource.py  sm.py
drepr/readers/: Cargo.toml
drepr/readers/src/: index.rs  lib.rs  prelude.rs  ra_reader.rs  value.rs
drepr/readers/src/cpython/: mod.rs
drepr/readers/src/csv/: csv_ra_reader.rs
drepr/readers/src/iterators/index/: known_range_iterator.rs  mod.rs  path_index_iterator.rs  unknown_range_iterator.rs
drepr/readers/src/netcdf/: mod.rs
drepr/readers/src/path_expr/: index_expr.rs  range_expr.rs  set_index_expr.rs
drepr/readers/src/spreadsheet/: mod.rs  spreadsheet_ra_reader.rs  spreadsheet_ra_reader_original.rs
drepr/readers/tests/iterators/: known_range_iterator.rs  mod.rs  unknown_range_iterator.rs
examples/: exec_examples.py
notebooks/: s10_speed_comparison.ipynb  s11_read_data_comparison.ipynb  s20_tutorial_csv.ipynb  s21_tutorial_pihm2cycle.ipynb
pydrepr/: .gitignore  Pipfile  devel  pytest.ini  readme.md  setup.py
python/: .gitignore  README.md  devel
python/drepr/: main.py  (+4 more)
readers/: Cargo.toml
readers/src/: lib.rs  macros.rs  prelude.rs  ra_reader.rs
readers/src/cpython/: index_conversion.rs  value_conversion.rs
readers/src/csv/: csv_ra_reader.rs  mod.rs
readers/src/iterators/index/: known_range_iterator.rs  known_range_iterator.rs.manual_version  path_index_iterator.rs  unknown_range_iterator.rs  unknown_range_iterator.rs.manual_version
readers/src/json/: mod.rs
readers/src/netcdf/: mod.rs
readers/src/path_expr/: mod.rs  range_expr.rs
readers/src/spreadsheet/: mod.rs  spreadsheet_ra_reader.rs
readers/tests/: helpers.rs  main.rs
src/: lib.rs  main.rswip  ops_macro.rs
tests/: helpers.rs  main.rs  test_executors.rs
toberemoved/: .travis.yml
webapp/: .env.stage  .gitignore  Dockerfile  Pipfile
www/: .env.dev  .env.template  Pipfile  docker-compose.dev.yml  docker-compose.stage.yml  docker-compose.yml  pytest.ini  readme.md  webapp.ini
(+689 files in other folders)
