[package]
name = "drepr"
version = "1.2.1"
authors = ["Binh Vu <binh@toan2.com>"]
edition = "2018"

[lib]
name = "drepr"
crate-type = ["cdylib", "rlib"]

[package.metadata.maturin]
python-source = "python"

[dependencies]
readers = { path = "./readers" }
regex = "1.5.6"
hashbrown = "0.12.1"
fnv = "1.0.7"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
chrono = "0.4.19"
petgraph = "0.6.2"
clap = "3.1.18"
itertools = "0.10.3"
fancy-regex = "0.10.0"
lazy_static = "1.4.0"
pyo3 = "0.16.5"

[features]
enable-exec-macro-cls-map = []
extension-module = ["pyo3/extension-module"]
