[package]
name = "readers"
version = "0.2.2"
authors = ["Binh Vu <binh@toan2.com>"]
edition = "2018"

[lib]
name = "readers"

[dependencies]
regex = "1.5.6"
csv = "1.1.6"
fnv = "1.0.7"
hashbrown = "0.12.1"

serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
xml-rs = "0.8.4"
clap = "3.1.18"
itertools = "0.10.3"
fancy-regex = "0.10.0"
lazy_static = "1.4.0"
netcdf = { version = "0.7.0", optional = true }

# for excel
calamine = "0.18.0"

pyo3 = "0.16.5"
