# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "engine"
version = "1.0.3"
authors = ["Binh Vu <binh@toan2.com>"]
edition = "2018"

[lib]
name = "engine"
crate-type = ["rlib", "cdylib"]

[features]
disable-python = []
enable-exec-macro-cls-map = []

[dependencies]
readers = { path = "../readers" }
regex = "1.1.6"
hashbrown = "0.4.0"
fnv = "1.0.6"

serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
serde_yaml = "0.8.9"
chrono = "0.4.6"
petgraph = "0.4.13"
clap = "2.33.0"
itertools = "0.8.0"
fancy-regex = "0.1.0"
lazy_static = "1.3.0"

[dependencies.cpython]
version = "0.2.1"
# Note: enable this feature generating error when running test or building binary package. See README.md for more information
#features = ["extension-module"]
