[package]
name = "readers"
version = "0.2.0"
authors = ["Binh Vu <binh@toan2.com>"]
edition = "2018"

[lib]
name = "readers"

[features]
disable-python = []

[dependencies]
regex = "1.1.6"
csv = "1.1.1"
fnv = "1.0.6"
hashbrown = "0.4.0"

serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
xml-rs = "0.8"
# netcdf = "0.1.0"
clap = "2.33.0"
itertools = "0.8.0"
fancy-regex = "0.1.0"
lazy_static = "1.3.0"

# for excel
calamine = "0.15.4"

[dependencies.cpython]
version = "0.2.1"